--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "express": "^4.17.3",
     "prisma": "^3.12.0",
     "ts-node": "^10.7.0",
-    "tsc": "^2.0.4"
+    "tsc": "^2.0.4",
+    "twilio": "^3.76.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.6.3"
   }
 }
