--- a/package.json
+++ b/package.json
@@ -5,18 +5,17 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@prisma/client": "^3.12.0",
-    "@types/express": "^4.17.13",
-    "@types/node": "^17.0.24",
     "cors": "^2.8.5",
+    "@prisma/client": "^3.12.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "prisma": "^3.12.0",
-    "ts-node": "^10.7.0",
-    "tsc": "^2.0.4",
     "twilio": "^3.76.1"
   },
   "devDependencies": {
-    "typescript": "^4.6.3"
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.24",
+    "typescript": "^4.6.3",
+    "prisma": "^3.12.0",
+    "ts-node": "^10.7.0"
   }
 }
